html content update

--- a/index.html
+++ b/index.html
@@ -53,14 +53,47 @@
                 <button>free consultation</button>
             </div>
         </div>
+        <nav class="page-nav">
+            <ul class="page-nav-menu">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">shop</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+            <ul class="page-nav-icons">
+                <li><a href="#">
+                    shopping bag
+                </a></li>
+                <li><a href="#">
+                    magnifying class
+                </a></li>
+            </ul>
+            <ul class="page-nav-social">
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
         <div class="banner">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h1>advisory business consulting services</h1>
+                <p>We offer consulting expertise in the areas of turnaround management, receiverships, and loan restructuring. Our services, through corporate renewal and revoery, enable a return to profitability.</p>
+                <button>meet our expert</button>
+            </div>
         </div>
     </header>
     <main>
         <section class="about-us">
             <div class="wrapper">
                 <div class="co-description">
+                    <h3>we help</h3>
+                    <h2>Highly collaborative and personalized business transformation consulting</h2>
+                    <p>Our approach includes facilitated workshops, individual interviews, and team reviews - all desgined to foster close collaboration between your tema and our business consultantas, helping us to establish as in-depth understanding of your business and technology requirements as the foundation of our assessment process.</p>
                     <button>read more</button>
                 </div>
                 <div class="free-consult">
@@ -71,39 +104,66 @@
         <section class="services">
             <div class="wrapper">
                 <div class="services-title">
-    
+                    <h3>What we provide</h3>
+                    <h2>our services</h2>
                 </div>
                 <div class="half">
                     <div class="third">
                         <div class="service-icon">
-                            <img src="" alt="">
+                            <img src="images/icons/2404044 - calendar date every day grid month schedule year.png" alt="calendar icon">
                         </div>
-                        <div class="service-details"></div>
-                    </div>
+                        <div class="service-details">
+                            <h4>business growth</h4>
+                            <p>Helping you get the greatest strategic advantage from your data management environment.</p>
+                        </div>
+                    </div> <!-- End of 'thid' div-->
                     <div class="third">
                         <div class="service-icon">
-                            <img src="" alt="">
+                            <img src="images/icons/2404067 - bookkeeping contract document grid paper pen treaty.png" alt="notebook icon">
                         </div>
-                        <div class="service-details"></div>
-                    </div>
+                        <div class="service-details">
+                            <h4>sustainability</h4>
+                            <p>When it comes to sustainability & corporate responsibility, Complete with power and flexibility.</p>
+                        </div>
+                    </div> <!-- End of 'thid' div-->
                     <div class="third">
                         <div class="service-icon">
-                            <img src="" alt="">
+                            <img src="images/icons/2404047 - business grid idea lamp light shine.png" alt="idea lamp icon">
+                        </div> 
+                        <div class="service-details">
+                            <h4>performance</h4>
+                            <p>Helping you get the greatest strategic advantage from your data management environemnt.</p>
                         </div>
-                        <div class="service-details"></div>
-                    </div>
+                    </div> <!-- End of 'thid' div-->
                 </div>
             </div>
             <!-- There are two halfs to the service section (Style first half first) -->
-        </section>
+        </section> <!-- End of 'services' section-->
         <section class="rational">
             <div class="wrapper">
                 <div class="rational-script"></div>
-                <div class="rational-image"><img src="" alt=""></div>
+                <div class="rational-image"><img src="images/photos/gem-lauris-a-place-for-creation-384958.png" alt="colour block painting"></div>
+                <div class="rationals-content">
+                    <h2>why choosing advisory</h2>
+                    <h5>Our services, through corporate renewal and recovery, enable a return to profitability.</h5>
+                    <p>Advisory Business Consulting offers a wide range of services of business either before or during touch financial times. What sets us apart from other industry is over three decades of combined legal and business expertise. Whether your business is struggling to avoid bankruptcy or trying its best to prepare for it, we will provide the assistance you need to make the right decisions.</p>
+                </div>
                 <div class="rationals">
-                    <div class="third"></div>
-                    <div class="third"></div>
-                    <div class="third"></div>
+                    <div class="third">
+                        <img src="" alt="">
+                        <h5>risk management</h5>
+                        <p>Consulting understands that to help meet client challenges.</p>
+                    </div> <!-- End of 'thid' div-->
+                    <div class="third">
+                        <img src="" alt="">
+                        <h5>strategic communication</h5>
+                        <p>Consulting understands that to help meet client challenges</p>
+                    </div> <!-- End of 'thid' div-->
+                    <div class="third">
+                        <img src="" alt="">
+                        <h5></h5>
+                        <p></p>
+                    </div> <!-- End of 'thid' div-->
                 </div>
             </div>
         </section>
