--- a/index.html
+++ b/index.html
@@ -13,71 +13,87 @@
 <body>
     <header>
         <div class="navigation">
+            <div class="top-nav">
+                <div class="wrapper">
+                    <nav>
+                        <ul class="contact-info">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </nav>
+                    <nav>
+                        <ul class="account">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
             <div class="wrapper">
-                <nav>
-                    <ul class="contact-info">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </nav>
-                <nav>
-                    <ul class="account">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div>
-                <div>
-                    <div>
-                        <img src="images/icons/2398145 - app locked mobile open line safe secured security.png" alt="Advisory Logo">
+                <div class="company-info">
+                    <div class="company-info-item">
+                        <div class="company-info-img">
+                            <img src="images/icons/2398145 - app locked mobile open line safe secured security.png" alt="Advisory Logo">
+                        </div>
+                        <div class="company-info-info">
+                            <h3>advisor<span>y</span></h3>
+                            <p>perfect business soltions</p>
+                        </div>
                     </div>
-                    <div>
-                        <h3>advisor<span>y</span></h3>
-                        <p>perfect business soltions</p>
+                    <div class="company-info-item">
+                        <div class="company-info-img"><img src="images/icons/internet.png" alt="world icon"></div>
+                        <div class="company-info-info">
+                            <h4>main office</h4>
+                            <p>36 advice the good, CA</p>
+                        </div>
                     </div>
+                    <div class="company-info-item">
+                        <div class="company-info-img"><img src="images/icons/stopwatch.png" alt="stopwatch"></div>
+                        <div class="company-info-info">
+                            <h4>opening time</h4>
+                        </div>
+                    </div>
+                    <button>free consultation</button>
                 </div>
-                <div>
-                    <div><img src="images/icons/internet.png" alt="world icon"></div>
-                    <div>
-                        <h4>main office</h4>
-                        <p>36 advice the good, CA</p>
-                    </div>
                 </div>
-                <div>
-                    <div><img src="images/icons/stopwatch.png" alt="stopwatch"></div>
-                    <div>
-                        <h4>opening time</h4>
-                    </div>
-                </div>
-                <button>free consultation</button>
-            </div>
         </div>
         <nav class="page-nav">
-            <ul class="page-nav-menu">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a href="#">blog</a></li>
-                <li><a href="#">shop</a></li>
-                <li><a href="#">contact</a></li>
-            </ul>
-            <ul class="page-nav-icons">
-                <li><a href="#">
-                    shopping bag
-                </a></li>
-                <li><a href="#">
-                    magnifying class
-                </a></li>
-            </ul>
-            <ul class="page-nav-social">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
+           <div class="wrapper">
+                <ul class="page-nav-menu">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">services</a></li>
+                    <li><a href="#">projects</a></li>
+                    <li><a href="#">blog</a></li>
+                    <li><a href="#">shop</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+                <ul class="page-nav-icons">
+                    <li><a href="#">
+                        <img src="images/icons/shopping-bag 126515.png" alt="shopping bag icon">
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </a></li>
+                </ul>
+                <ul class="page-nav-social">
+                    <li><a href="#">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa fa-google" aria-hidden="true"></i>
+                    </a></li>
+                </ul>
+           <div>
         </nav>
         <div class="banner">
             <div class="wrapper">
@@ -152,7 +168,7 @@
                     <div class="third">
                         <img src="" alt="">
                         <h5>risk management</h5>
-                        <p>Consulting understands that to help meet client challenges.</p>
+                        <p>Consulting understands that to help meet client challenges</p>
                     </div> <!-- End of 'thid' div-->
                     <div class="third">
                         <img src="" alt="">
@@ -161,8 +177,8 @@
                     </div> <!-- End of 'thid' div-->
                     <div class="third">
                         <img src="" alt="">
-                        <h5></h5>
-                        <p></p>
+                        <h5>private capital advisory</h5>
+                        <p>Consulting understands that to help meet client challenges</p>
                     </div> <!-- End of 'thid' div-->
                 </div>
             </div>
@@ -170,32 +186,49 @@
         <section class="credentials">
             <div class="fourth">
                 <div class="icon">
-                    <img src="" alt="">
+                    <img src="images/icons/1058675 - digital f.png" alt="vector curve">
                 </div>
-                <div></div>
+                <div>
+                    <h4>project successfull</h4>
+                    <h3>2684</h3>
+                </div>
             </div>
             <div class="fourth">
                 <div class="icon">
-                    <img src="" alt="">
+                    <img src="images/icons/1058645 - audio lou.png" alt="audio icon">
                 </div>
-                <div></div>
+                <div>
+                    <h4>experienced consultants</h4>
+                    <h3>3450</h3>
+                </div>
             </div>
             <div class="fourth">
                 <div class="icon">
-                    <img src="" alt="">
+                    <img src="images/icons/1058678 - arrow bus -large.png" alt="target">
                 </div>
-                <div></div>
+                <div>
+                    <h4>team members</h4>
+                    <h3>125</h3>
+                </div>
             </div>
             <div class="fourth">
                 <div class="icon">
-                    <img src="" alt="">
+                    <img src="images/icons/1058684 - analysis -large.png" alt="graph">
                 </div>
-                <div></div>
+                <div>
+                    <h4>avg profit increased</h4>
+                    <h3>75%</h3>
+                </div>
             </div>
         </section>
         <section class="projects">
            <div class="wrapper">
-                <div class="projects-title"></div>
+                <div class="projects-title">
+                    <h2>What we done</h2>
+                    <h3>latest project</h3>
+                    <p>We have done more than 10,000 projects in the short period time and all the projects are done by our expert team with 100% satisfaction.</p>
+                    <button>More Project</button>
+                </div>
                 <div class="projects-details"></div>
                 <div class="projects-img">
                     <div class="third"><img src="images/photos/stil-331259.png" alt="Mac Keyboard next to notebooks"></div>
@@ -209,43 +242,63 @@
                 <div class="statement-img">
                     <img src="images/photos/marius-ciocirlan-398931.png" alt="Profile of Advisory VP">
                 </div>
-                <div class="vp-statement"></div>
+                <div class="vp-statement">
+                    <p>Our consultants, engineers and architects bring deep industry and technical knowledge to each engagement based on years of experince helping companies around the world adopt softward and get strategic.</p>
+                    <h4>mahufuz riad</h4>
+                    <p>funder vp</p>
+                </div>
             </div>
         </section>
         <section class="news">
             <div class="wrapper">
-                <div class="news-title"></div>
+                <div class="news-title">
+                    <h3>from our blog</h3>
+                    <h2>latest news</h2>
+                </div>
                 <div class="news-details">
-    
+                    <h3>Our most popular rect Blog post. WE have done more than 10,000 projects in the short period time and all the projects are done</h3>  
+                    <button>more news</button>
                 </div>
                 <div class="news-article">
                     <div class="third">
                         <div class="news-img">
                             <img src="images/photos/rawpixel-com-296612.png" alt="Girl looking up from laptop">
                         </div>
-                        <div class="news-content"></div>
+                        <div class="news-content">
+                            <h3>consulting reports third quarter 2017 financial results</h3>
+                            <p>For the quarter, revenues of $449.0 million increased $10.9 million, or 2.5%....</p>
+                            <p>November 06, 2017</p>
+                        </div>
                     </div>
                     <div class="third">
                         <div class="news-img">
                             <img src="images/photos/domenico-loia-272251.png" alt="Macs squared">
                         </div>
-                        <div class="news-content"></div>
+                        <div class="news-content">
+                            <h3>accounting, legal, engineering, dental, architectural ....</h3>
+                            <p>For the quarter, revenues of $449.0 million increased $10.9 million, or 2.5%....</p>
+                            <p>November 06, 2017</p>
+                        </div>
                     </div>
                     <div class="third">
                         <div class="news-img">
                             <img src="images/photos/rawpixel-com-252127.png" alt="two persons discussing in front of a laptop">
                         </div>
-                        <div class="news-content"></div>
+                        <div class="news-content">
+                            <h3>When a business can no longer meet the demands of its short/long term</h3>
+                            <p>For the quarter, revenues of $449.0 million increased $10.9 million, or 2.5%....</p>
+                            <p>November 06, 2017</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="partners">
            <div class="wrapper">
-                <div class="fourth"><img src="" alt=""></div>
-                <div class="fourth"><img src="" alt=""></div>
-                <div class="fourth"><img src="" alt=""></div>
-                <div class="fourth"><img src="" alt=""></div>
+                <div class="fourth"><img src="images/logos/ANC_NewLogo_EPS.png" alt="groupM logo"></div>
+                <div class="fourth"><img src="images/logos/logo-oxfam-.png" alt="Oxfam"></div>
+                <div class="fourth"><img src="images/logos/ANC_NewLogo_EPS.png" alt="ANC logo"></div>
+                <div class="fourth"><img src="images/logos/VMware.png" alt="VMware"></div>
            </div>
         </section>
         <section class="contact-us">
