header updates again, sorta got the flex working

--- a/index.html
+++ b/index.html
@@ -17,14 +17,30 @@
                 <div class="wrapper">
                     <nav>
                         <ul class="contact-info">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li class="contact-info-phone">
+                                <img src="images/icons/phone-call.png" alt="phone icon">
+                                <p><a href="#">+88 901231208</a></p>
+                            </li>
+                            <li class="contact-info-mail">
+                                <img src="images/icons/mail.png" alt="mail icon">
+                                <p><a href="#">Perfect_help@gmail.com</a></p>
+                            </li>
                         </ul>
                     </nav>
-                    <nav>
-                        <ul class="account">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                    <nav class="accounts">
+                        <div class="translate">
+                            <img src="images/icons/translate.png" alt="translate">
+                            <select name="translation" id="translation">
+                                <option value="english" selected>English</option>
+                                <option value="french">French</option>
+                                <option value="chinese">中文</option>
+                            </select>
+                        </div>
+                        
+                        <ul class="account-items">
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">claim & policy</a></li>
+                            <li class="selected"><a href="#">register</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -51,6 +67,7 @@
                         <div class="company-info-img"><img src="images/icons/stopwatch.png" alt="stopwatch"></div>
                         <div class="company-info-info">
                             <h4>opening time</h4>
+                            <p>mon-sri 10.00 to 19:00</p>
                         </div>
                     </div>
                     <button>free consultation</button>
